Prevent text in dataTables to overflow
by fixing the table layout. This is needed (or at least doesn't hurt) in all the dataTables.

--- a/src/api/app/assets/stylesheets/webui2/webui2.css.scss
+++ b/src/api/app/assets/stylesheets/webui2/webui2.css.scss
@@ -45,3 +45,8 @@
 html {
     overflow-y: scroll !important;
 }
+
+.dataTable {
+  table-layout: fixed
+}
+
